# autodoc-toml

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  RELEASE_PROCESS.md  RELEASING.md  WORKFLOW_REVIEW.md  pyproject.toml  test_parser_poc.py
.claude/: settings.json
.github/workflows/: build.yml  create-release.yml  docs.yml  lint.yml  publish.yml  release.yml  test.yml
docs/: api.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  quickstart.rst  requirements.rst  toml-doc-spec.rst
docs/requirements/: core-features.md  developer-experience.md
examples/: example.toml
src/sphinx_autodoc_toml/: extension.py  linter.py  parser.py
tests/: test_parser.py
